nineth version of the website

--- a/publication/ijio_18/index.html
+++ b/publication/ijio_18/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: June 20, 2024 --><html lang="en-us" >
+<!-- Last Published: October 1, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -900,7 +900,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://reinholdkesler.github.io/">Reinhold Kesler</a></h5>
-      <h6 class="card-subtitle">Senior Research Associate</h6>
+      <h6 class="card-subtitle">Assistant Professor of Economics</h6>
       <p class="card-text">My research agenda involves studying the power of digital platforms and the value of user data by means of innovative data collection and state-of-the-art empirical methods.</p>
       <ul class="network-icon" aria-hidden="true">
   
@@ -914,7 +914,7 @@
     
     
     <li>
-      <a href="mailto:reinhold.kesler@business.uzh.ch" >
+      <a href="mailto:Reinhold.Kesler@hhu.de" >
         <i class="fas fa-envelope"></i>
       </a>
     </li>
