--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: October 1, 2024 --><html lang="en-us" >
+<!-- Last Published: October 7, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -827,7 +827,7 @@
         
         
         <li>
-          <a href="mailto:Reinhold.Kesler@hhu.de"  aria-label="envelope">
+          <a href="mailto:kesler@dice.hhu.de"  aria-label="envelope">
             <i class="fas fa-envelope big-icon"></i>
           </a>
         </li>
