--- a/wp/zew_19/index.html
+++ b/wp/zew_19/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: October 1, 2024 --><html lang="en-us" >
+<!-- Last Published: October 7, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -849,7 +849,7 @@
     
     
     <li>
-      <a href="mailto:Reinhold.Kesler@hhu.de" >
+      <a href="mailto:kesler@dice.hhu.de" >
         <i class="fas fa-envelope"></i>
       </a>
     </li>
